<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">感恩薄</string>
    <string name="action_settings">设置</string>
    <string name="action_reflash">同步</string>
    <string name="action_search">搜索</string>
    <string name="action_filter">过滤</string>
    <string name="hello_world">Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!Hello world!</string>
    <string name="nav_home_string">首页</string>
    <string name="nav_draft_string">草稿箱</string>
    <string name="nav_myinfo_string">个人资料</string>
    <string name="nav_setup_string">设置</string>
    <string name="nav_version_string">感恩薄 V1.0</string>
    <string name="max_photo_allow_toast">您最多只能上传9张图片</string>
    <string name="publish">发表</string>
    <string name="new_thanks">新建感恩</string>
    <string name="title_activity_boot_strap">BootStrapActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_sign">注册</string>
    <string name="title_activity_login">登录</string>
    <string name="email_address">邮箱</string>
    <string name="email_address_hint">请使用您的常用邮箱地址</string>
    <string name="user_account">帐号</string>
    <string name="user_account_hint">用户名/邮箱</string>
    <string name="user_password">密码</string>
    <string name="user_password_hint">长度在6-14之间</string>
    <string name="welcome_str">记录、分享、发现生活中的小美好</string>
    <string name="guide3_title">记录你的感动瞬间</string>
    <string name="guide3_str1">图片、文字、语音，</string>
    <string name="guide3_str2">选择你喜欢的记录方式</string>
    <string name="guide3_str3">因谁感动？</string>
    <string name="guide3_str4">人物标签一目了然</string>
    <string name="title_activity_new_audio_message">NewAudioMessageActivity</string>
    <string name="cancel">取消</string>
    <string name="next">下一步</string>
    <string name="mic_text_init">按住录音</string>
    <string name="mic_description">按住录音</string>
    <string name="mic_re_record">重录</string>
    <string name="title_activity_new_audio_message_next_activity">NewAudioMessageNextActivity</string>

</resources>
