<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="48dp"
        android:background="#333333" >

        <ImageView
            android:id="@+id/mic_action_big"
            android:layout_width="182dp"
            android:layout_height="182dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/mic_action_big"
            android:contentDescription="@string/mic_description"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/mic_action_little"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/mic_action_little"
            android:contentDescription="@string/mic_description"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/mic_pause_big"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/oval_mic_big"
            android:contentDescription="@string/mic_description"
            android:visibility="invisible" />

        <Button
            android:id="@+id/mic_re_record"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="-25dp"
            android:layout_toLeftOf="@id/mic_pause_big"
            android:background="@drawable/oval_mic_re_record"
            android:contentDescription="@string/mic_description"
            android:text="@string/mic_re_record"
            android:textColor="#29d9c2"
            android:textSize="13sp"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/mic_view"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/mic_init"
            android:contentDescription="@string/mic_description" />

        <TextView
            android:id="@+id/mic_record_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/mic_view"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/mic_play_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mic_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/mic_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mic_action_big"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="#ECECEC"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mic_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:textSize="15sp" />

        <Button
            android:id="@+id/mic_btn"
            android:layout_width="120dp"
            android:layout_height="32dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/border_corner_mic"
            android:contentDescription="@string/mic_description"
            android:text="@string/mic_text_init"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="15sp" />

        <Button
            android:id="@+id/mic_btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:text="@string/next"
            android:textColor="#fbae17"
            android:textStyle="bold"
            android:textSize="15sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/mic_shadow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>